created csv parser, added api's for uploading store products and prices, added the csv's to the project, created api's and services for seeing getAll products, getAllProductPrices and getAllProductDiscounts from store

--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,8 @@
 		<module>Repository</module>
 		<module>Service</module>
 		<module>API</module>
-	</modules>
+        <module>Utils</module>
+    </modules>
 	<scm>
 		<connection/>
 		<developerConnection/>
@@ -45,7 +46,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>5.9</version>
+		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
